[gd_scene load_steps=8 format=3 uid="uid://ijchr0b1hj8w"]

[ext_resource type="Script" path="res://src/ui/components/menu/menu_profile_button.gd" id="1_8lo53"]
[ext_resource type="Texture2D" uid="uid://c3y600q1cirt5" path="res://assets/ui/ProfileExample.png" id="3_1yd2v"]
[ext_resource type="PackedScene" uid="uid://di2rgjpkv0c11" path="res://src/ui/components/label_avatar_name/label_avatar_name.tscn" id="3_31d1k"]
[ext_resource type="FontFile" uid="uid://drw8yv4w843s4" path="res://assets/themes/fonts/inter/Inter-SemiBold.ttf" id="4_vryu4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qellx"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.168627, 0.160784, 0.188235, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3crdu"]
corner_radius_top_left = 23
corner_radius_top_right = 23
corner_radius_bottom_right = 23
corner_radius_bottom_left = 23

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wap7v"]

[node name="MenuProfileButton" type="PanelContainer"]
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_qellx")
script = ExtResource("1_8lo53")

[node name="ProfileButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Panel_Profile_Picture" type="Control" parent="HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="HBoxContainer/Panel_Profile_Picture"]
clip_children = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -22.0
offset_right = 21.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3crdu")

[node name="TextureRect_Profile" type="TextureRect" parent="HBoxContainer/Panel_Profile_Picture/Panel"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_1yd2v")
expand_mode = 1
stretch_mode = 5

[node name="LabelAvatarName" parent="HBoxContainer" instance=ExtResource("3_31d1k")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
fit_text_to_label = true
font = ExtResource("4_vryu4")

[node name="Label_Name" parent="HBoxContainer/LabelAvatarName/Container_Label" index="0"]
theme_override_fonts/font = ExtResource("4_vryu4")

[node name="Label_Subaddress" parent="HBoxContainer/LabelAvatarName/Container_Label" index="1"]
theme_override_fonts/font = ExtResource("4_vryu4")

[node name="Separator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxEmpty_wap7v")

[connection signal="gui_input" from="ProfileButton" to="." method="_on_profile_button_gui_input"]
[connection signal="mouse_entered" from="ProfileButton" to="." method="_on_profile_button_mouse_entered"]
[connection signal="mouse_exited" from="ProfileButton" to="." method="_on_profile_button_mouse_exited"]
[connection signal="pressed" from="ProfileButton" to="." method="_on_profile_button_pressed"]
[connection signal="toggled" from="ProfileButton" to="." method="_on_texture_button_toggled"]

[editable path="HBoxContainer/LabelAvatarName"]
